modules/sg/main.tf
resource "aws_security_group" "alb_sg" {
    name = "${var.project_name}-alb-sg"
    vpc_id = var.vpc_id
    description = "Security group for ALB"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "Allow HTTP traffic"
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
        description = "Allow all outbound traffic"
    }
}


resource "aws_security_group" "app_sg" {
    name = "${var.project_name}-app-sg"
    vpc_id = var.vpc_id
    description = "Security group for app"
      ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
}



resource "aws_security_group" "db_sg" {
  name = "${var.project_name}-db-sg"
  vpc_id = var.vpc_id

  ingress {
    description     = "MySQL from application"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.app_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
